Add SVG icons for profile, search, trash, Twitter, VK, and arrow; include font styles for PT Sans Narrow

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "stylelint-config-htmlacademy": "^4.2.3"
   },
   "scripts": {
-    "lint:html": "linthtml source/*.html --config .linthtmlrc"
+    "lint:html": "linthtml source/*.html --config .linthtmlrc",
+    "lint:css": "stylelint '**/*.css' --fix"
+
   }
 }
